...
<resources>

    <!-- Toolbar -->
    <string name="app_name">Scheduled Recorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Files</string>
    <string name="tab_title_scheduled_recordings">Schedule</string>
    <string name="tab_title_remote">Remote</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_saved">Recording saved</string>
    <string name="toast_recording_deleted">Recording deleted</string>
...
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_file_edit">Edit</string>
    <string name="dialog_item_delete">Delete Item</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
...
    <!-- SnackBar -->
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_recording_deleted">Recording deleted</string>

    <!-- Fragments -->
    <string name="frag_sched_title">Scheduled recordings</string>
    <string name="frag_sched_scheduled_recording">scheduled recording</string>
    <string name="frag_sched_no_recordings">no scheduled recordings</string>
    <string name="act_addsched_schedule_recording">Schedule recording</string>

    <string name="audioview_recording">recording...</string>
    <string name="audioview_waiting">waiting...</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <string name="remote_no_signin">You are not signed-in. Please sign in and register your devices to start remote recording.</string>
    <string name="remote_sign_in_button">Sign-in</string>

    <!-- ScheduledRecordingDetailsActivity -->
    <string name="no_data">no data...</string>

    <!-- Actions -->
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <!-- Preferences -->
...
