...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/primary"
...
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvDateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
...
            android:visibility="@{(viewModel.dataAvailable &amp;&amp; !viewModel.dataLoading) ? View.VISIBLE : View.GONE}"
            android:onClick="@{(view) -> listener.showDatePickerDialog(view)}"
            android:textColor="@{viewModel.timeStartCorrectObservable &amp;&amp; viewModel.timesCorrectObservable ? @color/primary_text : @color/red}"
            style="@style/clickable_textview" />

        <TextView
            android:id="@+id/tvDateEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tvDateStart"
...
            android:visibility="@{(viewModel.dataAvailable &amp;&amp; !viewModel.dataLoading) ? View.VISIBLE : View.GONE}"
            android:onClick="@{(view) -> listener.showDatePickerDialog(view)}"
            android:textColor="@{viewModel.timeEndCorrectObservable ? @color/primary_text : @color/red}"
            style="@style/clickable_textview" />

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/expanded_horizontal_margin"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvDateStart"
            app:layout_constraintRight_toRightOf="parent"
...
            android:visibility="@{(viewModel.dataAvailable &amp;&amp; !viewModel.dataLoading) ? View.VISIBLE : View.GONE}"
            android:onClick="@{(view) -> listener.showTimePickerDialog(view)}"
            android:textColor="@{viewModel.timeStartCorrectObservable &amp;&amp; viewModel.timesCorrectObservable ? @color/primary_text : @color/red}"
            style="@style/clickable_textview" />

        <TextView
            android:id="@+id/tvTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/expanded_horizontal_margin"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvDateEnd"
            app:layout_constraintRight_toRightOf="parent"
...
