...
        android:textColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        style="@style/MyCustomTabLayout"
        android:elevation="4dp" />

    <com.iclaude.scheduledrecorder.ui.activities.ViewPagerNoSwipe
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@android:color/white" />

    <FrameLayout
...
